--- a/templates/gallery/partials/elements/menu.html
+++ b/templates/gallery/partials/elements/menu.html
@@ -48,7 +48,7 @@
 {{ menu_description|json_script:"menuDescription" }}
 <script>
     let menuDesctiption = "<b class='p-0 m-0'>" +
-        JSON.parse(document.getElementById('menuDescription').textContent) + "</b"
+        JSON.parse(document.getElementById('menuDescription').textContent) + "</b>"
 
     let menuBottomButtons = [
         "<a href='#panel-menu'>" +
