--- a/templates/gallery/partials/elements/menu.html
+++ b/templates/gallery/partials/elements/menu.html
@@ -127,6 +127,11 @@
                     page: {
                         selector: "#my-page"
                     }
+                },
+                classNames: {
+                    fixedElements: {
+                        fixed: ["pagination"]
+                    }
                 }
             });
         }
