--- a/templates/gallery/partials/elements/menu.html
+++ b/templates/gallery/partials/elements/menu.html
@@ -130,10 +130,11 @@
                 },
                 classNames: {
                     fixedElements: {
-                        fixed: ["pagination"]
+                        fixed: ["paginationArrows", "fancybox"]
                     }
                 }
             });
+
         }
     );
 </script>
