--- a/templates/gallery/partials/elements/nav-bar.html
+++ b/templates/gallery/partials/elements/nav-bar.html
@@ -3,17 +3,18 @@
       <a class="navbar-toggler mh-burger btn-icon btn-icon-only"
          data-toggle="collapse" data-target="#menu" aria-controls="menu"
          aria-expanded="true" aria-label="Toggle navigation" id="toggler">
-      <span class="mburger mburger--collapse">
-      <b></b>
-      <b></b>
-      <b></b></span>
+        <span class="mburger mburger--collapse">
+            <b></b>
+            <b></b>
+            <b></b>
+        </span>
       </a>
    </div>
    <a>
       <h3 class="mh-text m-0">#AESTHETICLIMBO</h3>
    </a>
    <div class="mh-btns-right m-0">
-      <a class="fa fa-shopping-bag" id="back-to-top"></a>
+      <a class="btn-icon btn-icon-only" id="back-to-top"><i class="fas fa-arrow-up"></i></a>
    </div>
 </nav>
 
@@ -21,12 +22,16 @@
     <nav class="mh-head fixed-bottom paginationArrows mb-2" id="pagination" style="background-color: rgba(0,0,0,0);">
         <div class="mh-btns-left mb-2">
             {% if pins.has_previous %}
-             <a class="nav-link-arrow page-link btn btn-icon btn-icon-only rounded text-gray" href="?page={{ pins.previous_page_number }}"><i class="fas fa-angle-double-left"></i></a>
+             <a class="nav-link-arrow page-link btn btn-icon btn-icon-only rounded text-gray" href="?page={{ pins.previous_page_number }}">
+                 <i class="fas fa-arrow-left"></i>
+             </a>
             {% endif %}
         </div>
         <div class=" mh-btns-right mb-2">
             {% if pins.has_next %}
-             <a class="nav-link-arrow page-link btn btn-icon btn-icon-only text-gray" href="?page={{ pins.next_page_number }}"><i class="fas fa-angle-double-right"></i></a>
+             <a class="nav-link-arrow page-link btn btn-icon btn-icon-only text-gray" href="?page={{ pins.next_page_number }}">
+                 <i class="fas fa-arrow-right"></i>
+             </a>
             {% endif %}
         </div>
     </nav>
