--- a/templates/gallery/showcase.html
+++ b/templates/gallery/showcase.html
@@ -17,18 +17,15 @@
 
 <! -- main -->
 {% block content %}
-    <nav class="text-center jumbotron bg-primary p-1">
-        <h5 class=" mt-5">
-            {{ section_title.1 }}
-        </h5>
+    <header class="text-center jumbotron bg-primary  m-0">
+        <h1 class="badge badge-pill badge-primary text-gray text-uppercase"><b> {{ section_title.1 }}</b></h1>
         <h1>
             {{ section_title.0 }}
         </h1>
-        <p>
-            artworks collection
-        </p>
+    <p> artworks collection</p>
+
         {% if pins.paginator.num_pages > 1  %}
-            <ul class="pagination pagination-sm circle-pagination justify-content-center">
+            <ul class="pagination circle-pagination pagination-sm justify-content-center">
                 {% if pins.number > paginate_limit.0 %}
                     <li class="page-item">
                         <a class="page-link" href="?page=1">
@@ -39,14 +36,14 @@
                 {% for i in pins.paginator.page_range %}
                     {% if pins.number == i %}
                         <li class="page-item active disabled">
-                            <a class="page-link" href="#">
+                            <a class="page-link  rounded" href="#">
                                 <b>{{ i }}</b>
                                 <span class="sr-only">current</span>
                             </a>
                         </li>
                     {% elif i > pins.number|add:'-3' and i < pins.number|add:'3' %}
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ i }}">
+                            <a class="page-link  rounded" href="?page={{ i }}">
                                 <b>{{ i }}</b>
                             </a>
                         </li>
@@ -60,8 +57,8 @@
                     </li>
                 {% endif %}
             </ul>
-        </nav>
         {% endif %}
+        </header>
     <div class="container container-masonry">
         <div class="masonry-grid row">
            <div id="masonry-grid-sizer" class=" col-xs-11 col-md-6 col-lg-6"></div>
